--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,9 +100,11 @@ header {
 /* New End */
 
 /* Contact start */
+
 .contact {
-   margin: 140px 0 272px 0;
-  text-align: center;
+   background: #E6E6E6;
+   width: 1366px;
+   height: 570px;
 }
 
 .contact h1 {
@@ -110,7 +112,7 @@ header {
 }
 
 .contact ul>li {
-  padding: 5px 0 0 20px;
+  line-height: 25px;
   font-family: 'BPG Ingiri Arial';
 }
 
@@ -127,7 +129,81 @@ header {
 .contact-first, .contact-second, .contact-third {
   color: #808080;
 }
+
+.left-block, .right-block {
+  display: inline-block;
+}
+
+.left-block {
+  vertical-align: top;
+  margin: 51px 44px 0 30px;
+}
+
+.right-block {
+  margin-top: 50px;
+  width: 874px;
+  height: 466px;
+  vertical-align: bottom;
+}
+
+iframe {
+  width: 100%;
+  height: 100%;
+}
+
+
 /* Contact end */
+
+/* Featured Start */
+.featured {
+  margin: 180px 0 68px 0;
+  font-family: 'RobotoRegular';
+}
+
+.featured-article {
+  display: inline-block;
+}
+
+.featured h1 {
+  margin-bottom: 30px;
+  font-size: 24px;
+}
+
+.featured-article h2 {
+  text-align: left;
+  margin-bottom: 13px;
+  font-size: 22px;
+  color: #3D58A6;
+  text-transform: uppercase;
+}
+
+.featured-article {
+  width: 570px;
+  height: 225px;
+  background: #F2F2F2;
+  text-align: center;
+  padding: 20px 20px 40px 20px;
+}
+
+.featured-article p {
+  display: inline-block;
+  width: calc(100% - 200px);
+  font-size: 20px;
+  margin-left: 60px;
+  vertical-align: center;
+  line-height: 25px;
+}
+
+.fuatured-article img {
+   width: 100px;
+}
+
+.right-article {
+  margin-left: 30px;
+
+}
+
+/* Featured End */
 
 /* Footer Start */
 footer {
